--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
 						<li><a href="#intro">Home</a></li>
 						<li><a href="#services">Services</a></li>
 						<li><a href="#portfolio">Portfolio</a></li>
-						<li><a href="#journal">Journal</a></li>
+						<li><a href="#journal">Testimonials</a></li>
 						<li><a href="#about">About Us</a></li>
-						<li><a href="#contact">Contact</a></li>
+						<li><a href="#contact">Contact Us</a></li>
 					</ul>
 
 				</nav>
@@ -87,9 +87,10 @@
 					<div class="row">
 						<div class="col full">
 							<div class="slider-text">
-								<h2>Hello, we are <span>kreative</span>. We specialize in branding, websites and photography.</h2>
-								<p>Aenean condimentum, lacus sit amet luctus lobortis, dolores et quas molestias excepturi
-									enim tellus ultrices elit, amet consequat enim elit noneas sit amet luctu.</p>
+								<!-- <h2>Hello, we are <span>kreative</span>. We specialize in branding, websites and photography.</h2> -->
+								<h2>We make awesome websites for both <span>individuals</span> and <span>businesses</span>.</h2>
+								<!-- <p>Aenean condimentum, lacus sit amet luctus lobortis, dolores et quas molestias excepturi
+									enim tellus ultrices elit, amet consequat enim elit noneas sit amet luctu.</p> -->
 							</div>
 						</div>
 					</div>
@@ -100,10 +101,11 @@
 					<div class="row">
 						<div class="col full">
 							<div class="slider-text">
-								<h2>Take a look at some of <a href="#portfolio" title="">our works</a> or <a href="#contact" title="">get in
+								<!-- <h2>Take a look at some of <a href="#portfolio" title="">our works</a> or <a href="#contact" title="">get in
 										touch</a> to discuss how we can help you.</h2>
 								<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum
-									deleniti eos et accusamus.</p>
+									deleniti eos et accusamus.</p> -->
+								<h2><span>Get in touch</span> with us to know more about exciting offers.</h2>
 							</div>
 						</div>
 					</div>
@@ -123,16 +125,13 @@
 		<div class="row section-head">
 
 			<div class="col one-third">
-				<h2>Services</h2>
-				<p class="desc">Our list of awesome services.</p>
+				<h2>What do we offer?</h2>
+				<p class="desc">Take a look at our amazing services.</p>
 			</div>
 
 			<div class="col two-thirds">
 				<div class="intro">
-					<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum
-						deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate.
-						At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium.
-					</p>
+					<p>Netscrew Technologies is a team of professionals that work rigorously day and night to deliver high - quality results. Our crew consists of certified professionals. We create high - quality websites and mobile applications for personal, as well as commercial purposes. We also provide hardware and software solutions.</p>
 				</div>
 			</div>
 
@@ -143,27 +142,27 @@
 			<div class="services-wrapper">
 
 				<div class="col">
-					<h2><i class="icon-desktop"></i>Webdesign</h2>
+					<h2><i class="icon-desktop"></i>Website Development</h2>
 					<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum
 						deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate.
 						At vero eos et accusamus et molestias iusto odio dignissimos.</p>
 				</div>
 
 				<div class="col">
-					<h2><i class="icon-star"></i>Branding</h2>
+					<h2><i class="icon-star"></i>Mobile App Development</h2>
 					<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum
 						deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate.
 						At vero eos et accusamus et iusto odio dignissimos.</p>
 				</div>
 
 				<div class="col m-first">
-					<h2><i class="icon-camera"></i>Photography</h2>
+					<h2><i class="icon-camera"></i>Software Solutions</h2>
 					<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum
 						deleniti atque corrupti quos dolores et molestias quas molestias excepturi sint occaecati cupiditate.
 						At vero eos et accusamus et iusto odio dignissimos.</p>
 				</div>
 
-				<div class="col first">
+				<!-- <div class="col first">
 					<h2><i class="icon-globe"></i>Web Development</h2>
 					<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum
 						deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate.
@@ -182,7 +181,7 @@
 					<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum
 						deleniti atque corrupti molestias quos dolores et quas molestias excepturi sint occaecati cupiditate.
 						At vero eos et accusamus et iusto odio dignissimos.</p>
-				</div>
+				</div> -->
 
 			</div> <!-- Services-Wrapper End -->
 
