Updated icons and copyright info

--- a/index.html
+++ b/index.html
@@ -149,14 +149,14 @@
 				</div>
 
 				<div class="col">
-					<h2><i class="icon-star"></i>Mobile App Development</h2>
+					<h2><i class="icon-mobile-phone"></i>Mobile App Development</h2>
 					<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum
 						deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate.
 						At vero eos et accusamus et iusto odio dignissimos.</p>
 				</div>
 
 				<div class="col m-first">
-					<h2><i class="icon-camera"></i>Software Solutions</h2>
+					<h2><i class="icon-gear"></i>Software Solutions</h2>
 					<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum
 						deleniti atque corrupti quos dolores et molestias quas molestias excepturi sint occaecati cupiditate.
 						At vero eos et accusamus et iusto odio dignissimos.</p>
@@ -199,11 +199,9 @@
 			<div class="col full">
 
 				<h2>Portfolio</h2>
-				<p class="desc">Check out our latest projects.</p>
+				<p class="desc">Check out our projects.</p>
 
-				<p class="intro">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum
-					deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate.
-					At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium.
+				<p class="intro">Some of our projects are showcased below. Take a look and tell us what you think.
 				</p>
 
 			</div>
@@ -912,8 +910,7 @@
 
 			<div class="col g-7">
 				<ul class="copyright">
-					<li>&copy; 2014 Kreative</li>
-					<li>Design by <a href="http://www.styleshout.com/" title="Styleshout">Styleshout</a></li>
+					<li>&copy; 2018 Netscrew Technologies</li>
 				</ul>
 			</div>
 
