--- a/index.html
+++ b/index.html
@@ -831,26 +831,26 @@
 
 						<div>
 							<label for="contactName">Name <span class="required">*</span></label>
-							<input name="contactName" type="text" id="contactName" size="35" value="" />
+							<input name="contactName" type="text" id="contactName" size="35" value="" required>
 						</div>
 
 						<div>
 							<label for="contactEmail">Email <span class="required">*</span></label>
-							<input name="contactEmail" type="text" id="contactEmail" size="35" value="" />
+							<input name="contactEmail" type="email" id="contactEmail" size="35" value="" required>
 						</div>
 
 						<div>
 							<label for="contactSubject">Subject</label>
-							<input name="contactSubject" type="text" id="contactSubject" size="35" value="" />
+							<input name="contactSubject" type="text" id="contactSubject" size="35" value="">
 						</div>
 
 						<div>
 							<label for="contactMessage">Message <span class="required">*</span></label>
-							<textarea name="contactMessage" id="contactMessage" rows="15" cols="50"></textarea>
+							<textarea name="contactMessage" id="contactMessage" rows="15" cols="50" required></textarea>
 						</div>
 
 						<div>
-							<button class="submit">Submit</button>
+							<button class="submit" type="submit">Submit</button>
 							<span id="image-loader">
 								<img src="images/loader.gif" alt="" />
 							</span>
@@ -881,20 +881,8 @@
 					State, Anytown
 				</p>
 
-				<p>
-					Phone: 0 123 456 789 0 <br />
-					Email: info [@] kreativedesign.com
-				</p><br />
-
-				<h3>Template Info</h3>
-
-				<p>Kreative is a free website template by <a href="http://www.styleshout.com/">styleshout.com</a>. This work is
-					released and licensed under the <a href="http://creativecommons.org/licenses/by/3.0/" rel="license">
-						Creative Commons Attribution 3.0 License</a>, which means that you are free to
-					use and modify it for any personal or commercial purpose. All I ask is that you give me credit by including a
-					credit link to
-					<a href="http://www.styleshout.com/">my website</a>.
-				</p>
+				<p>Email: <a href="mailto:netscrewtechnologies@gmail.com">netscrewtechnologies@gmail.com</a></p>
+					<br>
 
 			</aside>
 
